# air-quality-streaming-labs

./: .gitignore  CLUSTER_MIGRATION.md  CONFIG.md  FIX_SCHEMA.md  NEXT_STEPS.md  QUICK_START.md  README.md  pyproject.toml  run_dashboard.sh  run_spark_cassandra.sh  run_websocket_server.sh  start_all.sh  stop_all.sh
benchmark/: analyzer_tool.py  monitor_lag.py  producer_tool.py  results_stress.csv  run_suite.sh  visualize_results.py
dashboard/: README.md  streamlit_app.py  websocket_server.py
data/processed/: air_quality_merged.parquet
docker/: docker-compose.yml
kafka/: consumer.py  producer.py
scripts/: DEBUG_README.md  analyze.py  check_data.py  create_topics.sh  data_preprocessing.py  debug_system.py  init_cassandra.cql  update_cassandra_schema.sh  upsample.py
spark/: sink_cassandra.py  streaming_job.py
